Fixed alignment of big button on projects page.

--- a/web/src/main/webapp/css/main.css
+++ b/web/src/main/webapp/css/main.css
@@ -29,6 +29,7 @@ table .btn-panel {
 
 h3 .btn {
 	float: right;
+	margin-top: 5px;
 }
 
 h3 .btn-mini {
